vlib/v/checker/tests/match_no_branch_cast_rest_casted_err.vv
fn main() {
	name := 'b'
	nb := match name {
		'a' { u8(10) }
		'b' { 345 }
		else { 0 }
	}

	println(nb)
}
